added resume changed email

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
           <dd><a rel='me' href='https://en.wikipedia.org/wiki/San_Francisco'>San Francisco</a></dd>
           <dt>Email</dt>
           <dd><a rel='me' href="mailto:chad@sahlhoff.com" itemprop="email">chad@sahlhoff.com</a></dd>
+           <dt>Resume</dt>
+          <dd>@<a rel='me' href='https://docs.google.com/document/d/1xIXpnEnif7X27EdxMdHkmXzqmgYb_vHUMpRZl33OOkc/pub'>
         </dl>
       </div>
     </div>
