--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
           <dt>Location</dt>
           <dd><a rel='me' href='https://en.wikipedia.org/wiki/San_Francisco'>San Francisco</a></dd>
           <dt>Email</dt>
-          <dd><a rel='me' href="mailto:chad@sahlhoff.com" itemprop="email">chad@sahlhoff.com</a></dd>
+          <dd><a rel='me' href="mailto:csahlhoff@gmail.com" itemprop="email">csahlhoff@gmail.com</a></dd>
            <dt>Resume</dt>
-          <dd>@<a rel='me' href='https://docs.google.com/document/d/1xIXpnEnif7X27EdxMdHkmXzqmgYb_vHUMpRZl33OOkc/pub'>
+          <dd><a rel='me' href='https://docs.google.com/document/d/1xIXpnEnif7X27EdxMdHkmXzqmgYb_vHUMpRZl33OOkc/pub'>
+            Google Drive</a></dd>
         </dl>
       </div>
     </div>
