--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <dt>App.net</dt>
           <dd>@<a rel='me' href='https://alpha.app.net/sahlhoff'>sahlhoff</a></dd>
           <dt>Twitter</dt>
-          <dd>@<a rel='me' href='http://twitter.com/chadsahlhoff'>chadsahlhoff</a></dd>
+          <dd>@<a rel='me' href='https://twitter.com/chadsahlhoff'>chadsahlhoff</a></dd>
           <dt>GitHub</dt>
           <dd>@<a rel='me' href='https://github.com/sahlhoff'>sahlhoff</a></dd>
           <dt>Hacker News</dt>
