--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <dl class="dl-horizontal">
           <dt>Google+</dt>
           <dd>+<a rel='me' href='https://plus.google.com/114926592811977429856?rel=author'>Chad Sahlhoff</a></dd>
+          <dt>Angel List</dt>
+          <dd>@<a rel='me' href='https://angel.co/sahlhoff'>sahlhoff</a></dd>
           <dt>Linkedin</dt>
           <dd>@<a rel='me' href='https://linkedin.com/in/sahlhoff'>sahlhoff</a></dd>
           <dt>App.net</dt>
