--- a/index.html
+++ b/index.html
@@ -88,5 +88,5 @@
     <br>
   </div>
 </body>
-<script src="http://bitwall.io/javascripts/widget.js" data-key="hdy9uhx" data-amount=".0001" data-name="Chads Website" data-description="this is my website"></script>
+<script src="http://localhost:5000/javascripts/widget.js" data-key="hdy9uhx" data-amount=".0001" data-name="Chads Website" data-description="this is my website"></script>
 </html>
