--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
   </script>
-
 </head>
 <body>
 
@@ -88,5 +87,8 @@
     <br>
   </div>
 </body>
-<script src="http://bitwall.io/javascripts/widget.js" data-key="f3su21t" data-amount=".0001" data-name="chads homage" data-description="this is chad sahlhoffs homepage"></script>
+<script src="http://localhost:5000/javascripts/widget.js" data-key="yfc5ty8" data-amount=".0001" data-name="widget name" data-description="testing the widget name"></script>
 </html>
+
+
+
