--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <br>
   </div>
 </body>
-<script src="http://localhost:5000/javascripts/widget.js" data-key="yfc5ty8" data-amount=".0001" data-name="widget name" data-description="testing the widget name"></script>
+<script src="http://bitwall.io/javascripts/widget.js" data-key="yfc5ty8" data-amount=".0001" data-name="widget name" data-description="testing the widget name"></script>
 </html>
 
 
