added id for widget

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <br>
   </div>
 </body>
-<script src="http://bitwall.io/javascripts/widget.js" data-key="1rwya1t" data-amount=".0001" data-name="my website" data-description="This is my personal website."></script>
+<script src="http://bitwall.io/javascripts/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-amount=".0001" data-name="my website" data-description="This is my personal website."></script>
 </html>
 
 
