--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,81 @@
-<ul>
-	<li><h1>h</h1></li>
-	<li><h1>e</h1></li>
-	<li><h1>l</h1></li>
-	<li><h1>l</h1></li>
-	<li><h1>0</h1></li>
-	<li><h1> </h1></li>
-	<li><h1>g</h1></li>
-	<li><h1>o</h1></li>
-	<li><h1>o</h1></li>
-	<li><h1>d</h1></li>
-	<li><h1>d</h1></li>
-	<li><h1>a</h1></li>
-	<li><h1>y</h1></li>
-</ul>
+<!DOCTYPE html>
+<html lang='en' prefix="og: http://ogp.me/ns#" itemscope itemtype="http://schema.org/Person">
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Chad Sahlhoff</title>
+  <meta name="description" content="Open Source Enthusiast, Lover of Life" />
+
+  <link rel='stylesheet' href='css/bootstrap.min.css' />
+  <link rel="shortcut icon" href="https://chad.sahlhoff.com/img/favicon.ico" />
+  <link type="text/plain" rel="author" href="https://chad.sahlhoff.com/humans.txt" />
+
+  <style>
+    body {
+      padding-top: 40px;
+      padding-bottom: 60px;
+    }
+    .muted a {
+      color: #999;
+    }
+  </style>
+
+  <meta name="og:title" property="og:title" content="Chad Sahlhoff" />
+  <meta name="og:type" property="og:type" content="public_figure" />
+  <meta name="og:image" property="og:image" content="https://chad.sahlhoff.com/img/me.jpg"/>
+  <meta name="og:url" property="og:url" content="https://chad.sahlhoff.com/" />
+  <meta name="og:site_name" property="og:site_name" content="Chad Sahlhoff" />
+
+
+  <!-- Google Analytics -->
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-36664370-1']);
+    _gaq.push(['_trackPageview']);
+    _gaq.push(['_trackPageLoadTime']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = 'https://ssl.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+</head>
+<body>
+
+  <div class="container">
+    <div class="page-header">
+      <h1><span itemprop="name">Chad Sahlhoff</span></h1>
+       <small class="lead muted" itemprop="description">Open Source Enthusiast, Lover of Life</small>
+    </div>
+
+    <div class="row">
+      <div class="span5">
+        <img src="img/me.png" class="img-rounded" alt="Chad at Social Hackathon, The Hub" itemprop="image" />
+      </div>
+      <div class="span7">
+        <ul>
+			<li><h1>h</h1></li>
+			<li><h1>e</h1></li>
+			<li><h1>l</h1></li>
+			<li><h1>l</h1></li>
+			<li><h1>0</h1></li>
+			<li><h1> </h1></li>
+			<li><h1>g</h1></li>
+			<li><h1>o</h1></li>
+			<li><h1>o</h1></li>
+			<li><h1>d</h1></li>
+			<li><h1>d</h1></li>
+			<li><h1>a</h1></li>
+			<li><h1>y</h1></li>
+		</ul>
+      </div>
+    </div>
+    <br>
+    <br>
+  </div>
+</body>
+<script src="http://localhost:5000/javascripts/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-title="Chad's dynamic homepage title"></script>
+</html>
