--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <br>
   </div>
 </body>
-<script src="http://bitwall.io/javascripts/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-title="Chad"></script>
+<script src="http://bitwall.io/javascripts/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-title="Chad's homepage paywall"></script>
 </html>
 
 
