--- a/contact.html
+++ b/contact.html
@@ -77,5 +77,5 @@
     <br>
   </div>
 </body>
-<script src="http://bitwall.io/javascripts/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-title="Chad's dynamic homepage title"></script>
+<script src="http://bitwall.io/javascripts/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-title="Chad's contact page"></script>
 </html>
