--- a/index.html
+++ b/index.html
@@ -4,23 +4,14 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 
-  <title>Chad Sahlhoff</title>
-  <meta name="description" content="Open Source Enthusiast, Lover of Life" />
+  <title>Sahlhoff | ffohlhaS</title>
+  <meta name="description" content="Digital Creative" />
 
-  <link rel='stylesheet' href='css/bootstrap.min.css' />
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="shortcut icon" href="https://chad.sahlhoff.com/img/favicon.ico" />
   <link type="text/plain" rel="author" href="https://chad.sahlhoff.com/humans.txt" />
-
-  <style>
-    body {
-      padding-top: 40px;
-      padding-bottom: 60px;
-    }
-    .muted a {
-      color: #999;
-    }
-  </style>
 
   <meta name="og:title" property="og:title" content="Chad Sahlhoff" />
   <meta name="og:type" property="og:type" content="public_figure" />
@@ -28,66 +19,21 @@
   <meta name="og:url" property="og:url" content="https://chad.sahlhoff.com/" />
   <meta name="og:site_name" property="og:site_name" content="Chad Sahlhoff" />
 
-
-  <!-- Google Analytics -->
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-36664370-1']);
-    _gaq.push(['_trackPageview']);
-    _gaq.push(['_trackPageLoadTime']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = 'https://ssl.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
 </head>
-<body>
-
-  <div class="container">
-    <div class="page-header">
-      <h1><span itemprop="name">Chad Sahlhoff</span></h1>
-       <small class="lead muted" itemprop="description">Open Source Enthusiast, Lover of Life</small>
-    </div>
-
-    <div class="row">
-      <div class="span5">
-        <img src="img/me.png" class="img-rounded" alt="Chad at Social Hackathon, The Hub" itemprop="image" />
-      </div>
-      <div class="span7">
-        <dl class="dl-horizontal">
-          <dt>Google+</dt>
-          <dd>+<a rel='me' href='https://plus.google.com/114926592811977429856?rel=author'>Chad Sahlhoff</a></dd>
-          <dt>Angel List</dt>
-          <dd>@<a rel='me' href='https://angel.co/sahlhoff'>sahlhoff</a></dd>
-          <dt>Linkedin</dt>
-          <dd>@<a rel='me' href='https://linkedin.com/in/sahlhoff'>sahlhoff</a></dd>
-          <dt>App.net</dt>
-          <dd>@<a rel='me' href='https://alpha.app.net/sahlhoff'>sahlhoff</a></dd>
-          <dt>Twitter</dt>
-          <dd>@<a rel='me' href='https://twitter.com/chadsahlhoff'>chadsahlhoff</a></dd>
-          <dt>GitHub</dt>
-          <dd>@<a rel='me' href='https://github.com/sahlhoff'>sahlhoff</a></dd>
-          <dt>Hacker News</dt>
-          <dd>@<a rel='me' href='https://news.ycombinator.com/user?id=sahlhoff'>sahlhoff</a></dd>
-          <dt>Instagram</dt>
-          <dd>@<a rel='me' href='http://instagram.com/sahlhoff'>sahlhoff</a></dd>
-          <dt>Location</dt>
-          <dd><a rel='me' href='https://en.wikipedia.org/wiki/San_Francisco'>San Francisco</a></dd>
-          <dt>Email</dt>
-          <dd><a rel='me' href="mailto:csahlhoff@gmail.com" itemprop="email">csahlhoff@gmail.com</a></dd>
-           <dt>Resume</dt>
-          <dd><a rel='me' href='https://docs.google.com/document/d/1xIXpnEnif7X27EdxMdHkmXzqmgYb_vHUMpRZl33OOkc/pub'>
-            Google Drive</a></dd>
-        </dl>
+<body> 
+    <div id="intro">
+      <div id="intro-wrapper">
+        <ul style="margin-top: 200px;">
+          <li>S</li>
+          <li>A</li>
+          <li>H</li>
+          <li>L</li>
+          <li>H</li>
+          <li>O</li>
+          <li>F</li>
+          <li>F</li>
+        </ul>
       </div>
     </div>
-    <br>
-    <br>
-  </div>
 </body>
-<script src="http://bitwall.io/javascripts/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-title="Chad's homepage paywall"></script>
 </html>
-
-
