--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>Sahlhoff | ffohlhaS</title>
   <meta name="description" content="Digital Creative" />
-
+  <link href='//fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="shortcut icon" href="https://chad.sahlhoff.com/img/favicon.ico" />
   <link type="text/plain" rel="author" href="https://chad.sahlhoff.com/humans.txt" />
@@ -23,15 +23,47 @@
 <body> 
     <div id="intro">
       <div id="intro-wrapper">
-        <ul style="margin-top: 200px;">
-          <li>S</li>
-          <li>A</li>
-          <li>H</li>
-          <li>L</li>
-          <li>H</li>
-          <li>O</li>
-          <li>F</li>
-          <li>F</li>
+        <ul style="margin-top: 50%;">
+          <li>
+            <div class="letters">
+              S
+            </div>
+          </li>
+          <li>
+            <div class="letters">
+              A
+            </div>
+          </li>
+          <li>
+            <div class="letters">
+              H
+            </div>
+          </li>
+          <li>
+            <div class="letters">
+              L
+            </div>
+          </li>
+          <li>
+            <div class="letters">
+              H
+            </div>
+          </li>
+          <li>
+            <div class="letters">
+              O
+            </div>
+          </li>
+          <li>
+            <div class="letters">
+              F
+            </div>
+          </li>
+          <li>
+            <div class="letters">
+              F
+            </div>
+          </li>
         </ul>
       </div>
     </div>
