--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
         </ul>
       </div>
     </div>
-    <div id="nav"></div>
+    <div id="nav">
+      <div id="subnav">
+        <a href="#/about" id="nav-about">About</a>
+        &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="#/blog" id="nav-blog">Blog</a>
+      </div>
+    </div>
 </body>
 </html>
