--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="Digital Creative" />
 
   <link href='//fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans|Source+Sans+Pro:200' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/nivo-slider.css" type="text/css" />
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="shortcut icon" href="https://chad.sahlhoff.com/img/favicon.ico" />
@@ -115,7 +116,7 @@
         <div id="main-spacer"> </div>
         <div id="about">
           <section>
-            <h1>Delete Self</h1>
+            <h1>Leaving a Lasting Impression.</h1>
             <ul id="about-list">
               <li>
                 <h2>About</h2>
