changed img slider

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Digital Creative" />
 
   <link href='//fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans|Source+Sans+Pro:200' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Voces|Source+Sans+Pro:200' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/nivo-slider.css" type="text/css" />
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="shortcut icon" href="https://chad.sahlhoff.com/img/favicon.ico" />
@@ -61,7 +61,7 @@
           <li>
             <div class="letters">L</div>
             <div id="slider_l" class="nivoSlider" style="position:relative; background-image:url(/img/slide3.jpg); background-position:initial initial; background-repeat: no-repeat no-repeat;">
-              <img src="/img/slide6.png" style="display:none;">
+              <img src="/img/slide21.jpg" style="display:none;">
               <img src="/img/slide2.jpg" style="display:none;">
               <img src="/img/slide11.jpg" style="display:none;">
             </div>
