--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <li>
                 <h2>About</h2>
                 <img id="about-image" alt="chad sahlhoff" src="/img/chadsahlhoff.jpg" width="460px">
-                <p><strong>Chad Sahlhoff</strong> lives in San Francisco and helps build startups.  In a prior life he was a pizza maker, cnc operator, and race car driver.  He is currently working on <a target="_blank" href="http://bitwall.io">bitwall.io</a>- helping content creators easily and effectively monetize content. </p>
+                <p><strong>Chad Sahlhoff</strong> lives in San Francisco and helps build startups.  In a prior life he was a pizza maker, cnc operator, and race car driver.  He is currently working on <a target="_blank" href="http://bitwall.io">bitwall.io</a>- helping content creators to easily and effectively monetize content. </p>
               </li>
               <li>
                 <h2>Contact</h2>
