--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       <div id="logo" style="display: none;">SAHLHOFF</div>
       <div id="subnav">
         <a href="#/about" id="nav-about">About</a>
-        &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="#/blog" id="nav-blog">Blog</a>
+        <!--&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="#/blog" id="nav-blog">Blog</a>-->
       </div>
     </div>
       
