--- a/index.html
+++ b/index.html
@@ -151,5 +151,5 @@
   <script src="/scripts/jquery.address.js" type="text/javascript"></script>
   <script src="/scripts/script.js" type="text/javascript"></script>
 </body>
-<script src="//bitwall.io/javascripts/widget.js" data-key="1rwya1t" data-amount=".0001" data-name="my website" data-description="This is my personal website." id="bitwallWidgetScript"></script>
+<script src="//www.bitwall.io/javascripts/widget.js" id="bitwallWidgetScript" data-title="Chicago Sun-Times Sports" data-key="9v0srgi"></script>
 </html>
