changed to sun-times

--- a/index.html
+++ b/index.html
@@ -151,5 +151,5 @@
   <script src="/scripts/jquery.address.js" type="text/javascript"></script>
   <script src="/scripts/script.js" type="text/javascript"></script>
 </body>
-<script src="//www.bitwall.io/javascripts/widget.js" id="bitwallWidgetScript" data-title="Chicago Sun-Times Sports" data-key="9v0srgi"></script>
+<script src="http://localhost:5000/javascripts/st/widget.js" id="bitwallWidgetScript" data-key="yfc5ty8" data-amount=".0001" data-name="widget name" data-description="testing the widget name"></script>
 </html>
