--- a/index.html
+++ b/index.html
@@ -151,5 +151,5 @@
   <script src="/scripts/jquery.address.js" type="text/javascript"></script>
   <script src="/scripts/script.js" type="text/javascript"></script>
 </body>
-<script src="http://localhost:5000/javascripts/st/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-amount=".0001" data-name="widget name" data-description="testing the widget name"></script>
+<script src="http://bitwall.io/javascripts/st/widget.js" id="bitwallWidgetScript" data-key="1rwya1t" data-amount=".0001" data-name="widget name" data-description="testing the widget name"></script>
 </html>
