--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div id="main-spacer"> </div>
         <div id="about">
           <section>
-            <h1>Leaving a Lasting Impression.</h1>
+            <h1>Technologist.</h1>
             <ul id="about-list">
               <li>
                 <h2>About</h2>
