--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
   <meta name="og:url" property="og:url" content="https://chad.sahlhoff.com/" />
   <meta name="og:site_name" property="og:site_name" content="Chad Sahlhoff" />
 
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-36664370-1']);
+    _gaq.push(['_trackPageview']);
+  
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  
+  </script>
+
 </head>
 <body> 
   <div id="container">
