--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               </li>
               <li>
                 <h2>Contact</h2>
-                <p><a href="mailto:csahlhoff@gmail.com" class="biglink">csahlhoff@gmail.com</a></p>
+                <p>Do <a href="mailto:csahlhoff@gmail.com" class="biglink">email me</a> with quesitons or just to say hi!</p>
               </li>
               <li>
                 <h2>Recent Press</h2>
