--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               </li>
               <li>
                 <h2>Contact</h2>
-                <p>Hello <a href="mailto:csahlhoff@gmail.com" class="biglink">csahlhoff@gmail.com</a></p>
+                <p>Hello <a href="mailto:chad@sahlhoff.com" class="biglink">chad@sahlhoff.com</a></p>
               </li>
               <li>
                 <h2>Recent Press</h2>
