--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <ul id="about-list">
               <li>
                 <h2>About</h2>
-                <p>I live in San Francisco, take <a href="//instagram.com/chadsahlhoff">photos</a> and write <a href="//github.com/sahlhoff">software</a>. I enjoy coffee in the mornings and rock climbing in the evenings.</p>
+                <p>Hello, I'm Chad! I live in San Francisco, take <a href="//instagram.com/chadsahlhoff">photos</a> and write <a href="//github.com/sahlhoff">software</a>. I enjoy coffee in the mornings and rock climbing in the evenings.</p>
                 <p><a href="//medium.com/@sahlhoff">Blog</a> | <a href="//instagram.com/chadsahlhoff">Instagram</a> | <a href="https://www.flickr.com/photos/133386111@N08/">Flickr</a> | <a href="//github.com/sahlhoff">Github</a></p>
               </li>
               <li>
